--- a/sidebar/resultElementInfo.css
+++ b/sidebar/resultElementInfo.css
@@ -18,7 +18,6 @@
   right:  2px;
   height: 300px;
   overflow: scroll;
-  border: 1px blue dashed;
 }
 
 .result-element-info h3 {
