--- a/sidebar/resultGrid.css
+++ b/sidebar/resultGrid.css
@@ -106,6 +106,9 @@ table td.result {
 table th.rule,
 table td.rule {
   text-align: left;
+}
+
+table td.rule {
   white-space:  nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
