--- a/sidebar/resultRuleInfo.css
+++ b/sidebar/resultRuleInfo.css
@@ -17,7 +17,6 @@
   right:  2px;
   height: 300px;
   overflow: scroll;
-  border: 1px blue dashed;
 }
 
 .result-rule-info h3 {
